# NoBullshitTimer

./: .gitignore  Dockerfile  NoBullshitTimer.csproj  NoBullshitTimer.sln  README.md  package-lock.json  package.json  tailwind.config.js
Api/: main.py  pyproject.toml  setup_test_environment.py  test_main.http
Api/api/: auth_api.py  common_api.py
Api/domain/: user.py
Api/infrastructure/: auth.py  container.py  result.py
Api/infrastructure/auth/: auth_logic.py
Api/infrastructure/database/: user_model.py  util.py
Api/infrastructure/repositories/: repository_base.py  user_repository.py
Api/service/: auth.py
Api/tests/integration/: test_user_repository.py
Api/tests/learning/: test_sqlalchemy_sessions.py
Api/tests/unit/service/: test_auth.py
Domain/: Timer.cs
NoBullshitTimer/: App.razor  NoBullshitTimer.csproj  README.md  _Imports.razor
NoBullshitTimer.Tests/: NoBullshitTimer.Tests.csproj  TestIntervalTimer.cs  UnitTest1.cs
NoBullshitTimer/Client/: NoBullshitTimer.Client.csproj  Program.cs  README.md  package-lock.json  tailwind.config.dev.js  tailwind.config.js
NoBullshitTimer/Client/Domain/: Workout.cs  (+4 more)
NoBullshitTimer/Domain/: IntervalTimer.cs
NoBullshitTimer/Pages/: Error.cshtml  Error.cshtml.cs  Index.razor  _Host.cshtml  _Layout.cshtml
NoBullshitTimer/Properties/: launchSettings.json
NoBullshitTimer/Server/: NoBullshitTimer.Server.csproj  Program.cs
NoBullshitTimer/Shared/: MainLayout.razor  NoBullshitTimer.Shared.csproj
Pages/: Index.razor  _Host.cshtml  _Layout.cshtml
Properties/: launchSettings.json
Shared/: MainLayout.razor
(+72 files in other folders)
